--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@applitools/eyes.webdriverio": "^2.7.0"
+    "@applitools/eyes.webdriverio": "https://github.com/applitools/eyes.webdriverio.javascript.git#bugfix_trello_1206_chrome78_position_provider"
   },
   "devDependencies": {
     "chromedriver": "^2.37.0",
