--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -55,9 +55,7 @@
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
-    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
-    "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\""
+    "test:it": "mocha --no-timeouts \"test/it/simple/**/*.spec.js\""
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
