fix(visual-grid-client): better canvas require, using browser: false

--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -46,6 +46,9 @@
     "postcss-value-parser": "^4.0.2",
     "throat": "^5.0.0"
   },
+  "browser": {
+    "jsdom": false
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
