--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -37,8 +37,8 @@
     "@applitools/functional-commons": "^1.5.2",
     "@applitools/http-commons": "^1.3.9",
     "@applitools/isomorphic-fetch": "^3.0.0",
+    "@applitools/jsdom": "^1.0.1",
     "he": "^1.2.0",
-    "jsdom": "^15.1.1",
     "lodash.mapvalues": "^4.6.0",
     "mime-types": "^2.1.24",
     "mkdirp": "^0.5.1",
@@ -46,7 +46,7 @@
     "throat": "^5.0.0"
   },
   "browser": {
-    "jsdom": false
+    "@applitools/jsdom": false
   },
   "devDependencies": {
     "chai": "^4.2.0",
