--- a/packages/eyes-appium/package.json
+++ b/packages/eyes-appium/package.json
@@ -48,7 +48,8 @@
   },
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/simple/**/*.spec.js\""
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
+    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\""
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
