--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@applitools/eyes-selenium",
+  "name": "@applitools/eyes-testcafe",
   "version": "4.31.23",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
@@ -39,24 +39,28 @@
     "@applitools/dom-utils": "^4.6.41",
     "@applitools/eyes-common": "^3.12.2",
     "@applitools/eyes-sdk-core": "^5.20.7",
-    "@applitools/visual-grid-client": "^13.3.6"
+    "@applitools/visual-grid-client": "^13.3.6",
+    "rimraf": "^3.0.0"
   },
   "devDependencies": {
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chromedriver": "^78.0.0",
+    "express": "^4.17.1",
+    "filenamify": "^4.1.0",
     "mocha": "^6.2.0",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "testcafe": "^1.5.0",
+    "ua-parser-js": "^0.7.20"
   },
   "peerDependencies": {
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "testcafe": "^1.5.0"
   },
   "scripts": {
-    "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
+    "test": "mocha --no-timeouts \"test/**/*.spec2.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
-    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec2.js\"",
+    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec2.js\"",
     "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\""
   },
   "license": "SEE LICENSE IN LICENSE",
