feat(eyes-sdk-core): added network sanity aka eyes-rub

--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -32,7 +32,9 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/eyes-common": "^3.12.2",
+    "@applitools/isomorphic-fetch": "^3.0.0",
     "axios": "^0.19.0",
+    "chalk": "^3.0.0",
     "es6-promise-pool": "^2.5.0",
     "tunnel": "0.0.6"
   },
@@ -45,6 +47,9 @@
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\""
+  },
+  "bin": {
+    "eyes-rub": "./bin/eyes-rub.js"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
