--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -47,7 +47,8 @@
     "chai": "^4.2.0",
     "chromedriver": "^78.0.0",
     "mocha": "^6.2.2",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "mocha-parallel-tests": "2.2.2"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
@@ -55,7 +56,7 @@
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
+    "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\""
   },
   "license": "SEE LICENSE IN LICENSE",
