fix(eyes-sdk-core): rename eyes-check-network and added tests

--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -49,7 +49,7 @@
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\""
   },
   "bin": {
-    "eyes-rub": "./bin/eyes-rub.js"
+    "eyes-check-network": "./bin/runCheckNetwork.js"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
