--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "lerna": "^3.18.3",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "mocha-parallel-tests": "2.2.2"
   },
   "config": {
     "commitizen": {
