--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
       "singleQuote": true,
       "trailingComma": "all",
       "bracketSpacing": false,
-      "jsxBracketSameLine": true
+      "jsxBracketSameLine": true,
+      "endOfLine": "auto"
     }],
     "no-process-exit": "off",
     "no-const-assign": "error",
@@ -32,7 +33,6 @@
     "constructor-super": "warn",
     "valid-typeof": "warn",
     "mocha-no-only/mocha-no-only": "error",
-    "node/exports-style": ["error", "exports"],
     "node/no-unpublished-require": ["off"]
   }
 }
