--- a/.eslintrc
+++ b/.eslintrc
@@ -12,15 +12,7 @@
   "extends": ["plugin:node/recommended"],
   "plugins": ["prettier", "mocha-no-only", "node"],
   "rules": {
-    "prettier/prettier": ["error", {
-      "semi": false,
-      "printWidth": 100,
-      "singleQuote": true,
-      "trailingComma": "all",
-      "bracketSpacing": false,
-      "jsxBracketSameLine": true,
-      "endOfLine": "lf"
-    }],
+    "prettier/prettier": "error",
     "no-process-exit": "off",
     "no-const-assign": "error",
     "no-this-before-super": "error",
