--- a/.travis.yml
+++ b/.travis.yml
@@ -25,18 +25,6 @@ cache: false
 install:
   - npm install
 
-stages:
-  - lint
-  - test
-
 script:
-  - npm ls
   - npm run test:unit
-
-jobs:
-  include:
-    - stage: lint
-      node_js: "lts/*"
-      script: npm run lint
-    - stage: test
-      script: npm run test:it
+  - npm run test:it
