--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "command": {
     "publish": {
       "allowBranch": "master",
+      "conventionalCommits": true,
       "changelog": false,
       "message": "chore: version release",
       "ignoreChanges": [
