chore: version release
 - @applitools/dom-utils@4.7.0
 - @applitools/eyes-appium@4.0.0-beta.0
 - @applitools/eyes-common@3.13.0
 - @applitools/eyes-images-browser@4.6.55
 - @applitools/eyes-images@4.12.26
 - @applitools/eyes-protractor@6.0.0-beta.0
 - @applitools/eyes-sdk-core-browser@4.5.53
 - @applitools/eyes-sdk-core@5.21.0
 - @applitools/eyes-selenium-jest-perf@4.5.99
 - @applitools/eyes-selenium@4.32.0
 - @applitools/visual-grid-client@13.5.0

--- a/packages/eyes-appium/package.json
+++ b/packages/eyes-appium/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-appium",
   "private": true,
-  "version": "4.0.0-beta",
+  "version": "4.0.0-beta.0",
   "description": "Applitools Eyes SDK for Appium WebDriver",
   "keywords": [
     "eyes-appium",
@@ -35,9 +35,9 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-common": "^3.12.2",
-    "@applitools/eyes-sdk-core": "^5.20.7",
-    "@applitools/eyes-selenium": "^4.31.24"
+    "@applitools/eyes-common": "^3.13.0",
+    "@applitools/eyes-sdk-core": "^5.21.0",
+    "@applitools/eyes-selenium": "^4.32.0"
   },
   "devDependencies": {
     "mocha": "^6.2.2",
