--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-protractor",
   "private": true,
-  "version": "6.0.0-beta",
+  "version": "6.0.0-beta.0",
   "description": "Applitools Eyes SDK for Protractor",
   "keywords": [
     "eyes-protractor",
@@ -35,7 +35,7 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-selenium": "^4.31.24"
+    "@applitools/eyes-selenium": "^4.32.0"
   },
   "devDependencies": {
     "protractor": "^6.0.0-beta"
