Added lint:fix script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "lerna bootstrap --hoist",
     "clean": "lerna clean --yes",
     "lint": "eslint . --ext js --quiet",
+    "lint:fix": "eslint . --ext js --quiet --fix",
     "test": "lerna run test --no-private",
     "test:diff": "lerna run test --since origin/master",
     "test:unit": "lerna run test:unit --parallel --no-private",
