--- a/packages/eyes-appium/package.json
+++ b/packages/eyes-appium/package.json
@@ -35,7 +35,7 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-common": "^3.13.1",
+    "@applitools/eyes-common": "3.13.1",
     "@applitools/eyes-sdk-core": "^5.21.1",
     "@applitools/eyes-selenium": "^4.32.1"
   },
