--- a/packages/eyes-appium/package.json
+++ b/packages/eyes-appium/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-appium",
   "private": true,
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0-beta.3",
   "description": "Applitools Eyes SDK for Appium WebDriver",
   "keywords": [
     "eyes-appium",
@@ -35,9 +35,9 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-common": "3.13.1",
-    "@applitools/eyes-sdk-core": "^5.21.2",
-    "@applitools/eyes-selenium": "^4.32.2"
+    "@applitools/eyes-common": "^3.14.0",
+    "@applitools/eyes-sdk-core": "^5.21.3",
+    "@applitools/eyes-selenium": "^4.32.3"
   },
   "devDependencies": {
     "mocha": "^6.2.2",
