--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\""
   },
   "license": "SEE LICENSE IN LICENSE",
