--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -30,9 +30,8 @@
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "directories": {
-    "example": "./example",
     "lib": "./lib",
-    "test": "./test"
+    "dist": "./dist"
   },
   "main": "./index.js",
   "dependencies": {
@@ -40,9 +39,18 @@
     "@applitools/eyes-common": "^3.12.2",
     "@applitools/eyes-sdk-core": "^5.20.7",
     "@applitools/visual-grid-client": "^13.3.6",
+    "@applitools/functional-commons": "^1.5.4",
     "rimraf": "^3.0.0"
   },
   "devDependencies": {
+    "@applitools/dom-capture":"^7.1.2",
+    "@joseph184/rollup-plugin-node-builtins": "^2.1.4",
+    "@babel/preset-env":"^7.7.6",
+    "rollup": "^1.27.9",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
@@ -57,6 +65,8 @@
     "testcafe": "^1.5.0"
   },
   "scripts": {
+    "build:dc": "rollup -c ./build/rollup.config.js",
+    "prepublishOnly": "npm run build:dc",
     "test": "mocha --no-timeouts \"test/**/*.spec2.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec2.js\"",
