--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -47,7 +47,8 @@
     "chai": "^4.2.0",
     "chromedriver": "^78.0.0",
     "mocha": "^6.2.2",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "@applitools/sdk-test-kit": "^1.0.0"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
