--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -38,7 +38,8 @@
     "stack-trace": "^0.0.10"
   },
   "devDependencies": {
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "chai": "^4.2.0"
   },
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
