--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-common",
-  "version": "3.17.0",
+  "version": "3.17.1",
   "description": "Utilities for working with Eyes JavaScript SDK and the visual grid",
   "keywords": [
     "applitools",
@@ -38,8 +38,8 @@
     "stack-trace": "^0.0.10"
   },
   "devDependencies": {
-    "mocha": "^6.2.2",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
   },
   "scripts": {
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
