--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-selenium",
-  "version": "4.33.0",
+  "version": "4.33.1",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
@@ -36,19 +36,19 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "^4.7.2",
-    "@applitools/eyes-common": "^3.15.0",
-    "@applitools/eyes-sdk-core": "^5.22.0",
-    "@applitools/visual-grid-client": "^13.5.3"
+    "@applitools/dom-utils": "^4.7.3",
+    "@applitools/eyes-common": "^3.17.1",
+    "@applitools/eyes-sdk-core": "^5.23.1",
+    "@applitools/visual-grid-client": "^13.5.4"
   },
   "devDependencies": {
+    "@applitools/sdk-test-kit": "^1.0.8",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chromedriver": "^78.0.0",
     "mocha": "^6.2.2",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "@applitools/sdk-test-kit": "^1.0.0"
+    "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
