--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "cd test && ../node_modules/.bin/wdio"
   },
   "author": "",
-  "license": "ISC",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@applitools/eyes.webdriverio": "^2.11.2"
   },
