--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ node_modules
 *~
 /packages/visual-grid-client/test/fixtures/test-app/dist/*
 packages/visual-grid-client/test/fixtures/src/*
+packages/eyes-testcafe/screenshots/*
