--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -4,8 +4,7 @@
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
-    "eyes-rendering",
-    "eyes-visual-grid",
+    "eyes-rendering", "eyes-visual-grid",
     "applitools",
     "eyes",
     "test automation",
@@ -58,7 +57,7 @@
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
-    "test:coverage": "coverage-tests --run --path test/coverage/index.js",
+    "test:coverage": "coverage-tests run --path test/coverage/index.js",
     "test:coverage:nuke": "coverage-tests --nuke"
   },
   "license": "SEE LICENSE IN LICENSE",
