--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -58,7 +58,7 @@
     "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
     "test:coverage": "coverage-tests run --path test/coverage/index.js",
-    "test:coverage:nuke": "coverage-tests --nuke"
+    "test:coverage:nuke": "coverage-tests run --nuke"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
