--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -42,6 +42,16 @@
     "@applitools/functional-commons": "^1.5.4",
     "rimraf": "^3.0.0"
   },
+  "scripts": {
+    "build": "rollup -c ./build/rollup.config.js",
+    "prepublishOnly": "npm run build",
+    "render": "node scripts/render.js",
+    "test": "mocha --no-timeouts \"test/**/*.spec2.js\"",
+    "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec2.js\"",
+    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec2.js\"",
+    "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\""
+  },
   "devDependencies": {
     "@applitools/dom-capture": "^7.1.2",
     "@babel/plugin-transform-async-to-generator": "^7.7.4",
@@ -62,6 +72,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-polyfill":"^3.0.0",
     "testcafe": "^1.5.0",
     "testcafe-browser-provider-browserstack": "^1.10.1",
     "ua-parser-js": "^0.7.20"
@@ -69,17 +80,7 @@
   "peerDependencies": {
     "testcafe": "^1.5.0"
   },
-  "scripts": {
-    "build:dc": "rollup -c ./build/rollup.config.js",
-    "prepublishOnly": "npm run build:dc",
-    "render": "node scripts/render.js",
-    "test": "mocha --no-timeouts \"test/**/*.spec2.js\"",
-    "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/**/*.spec2.js\"",
-    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec2.js\"",
-    "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\""
-  },
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "SEE LICENSE FILE",
   "engines": {
     "node": ">=8.9.0"
   }
