--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@applitools/eyes-selenium",
-  "version": "4.33.1",
+  "version": "4.33.2",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
-    "eyes-rendering", "eyes-visual-grid",
+    "eyes-rendering",
+    "eyes-visual-grid",
     "applitools",
     "eyes",
     "test automation",
@@ -35,13 +36,13 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "^4.7.3",
-    "@applitools/eyes-common": "^3.17.1",
-    "@applitools/eyes-sdk-core": "^5.23.1",
-    "@applitools/visual-grid-client": "^13.5.4"
+    "@applitools/dom-utils": "^4.7.4",
+    "@applitools/eyes-common": "^3.17.2",
+    "@applitools/eyes-sdk-core": "^5.23.2",
+    "@applitools/visual-grid-client": "^13.5.5"
   },
   "devDependencies": {
-    "@applitools/sdk-test-kit": "^1.0.8",
+    "@applitools/sdk-test-kit": "^1.0.12",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
