better play files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ node_modules
 packages/visual-grid-client/test/fixtures/src/*
 packages/eyes-testcafe/screenshots/*
 *.log
+packages/eyes-testcafe/**/*.pvt.testcafe.js
