--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -39,7 +39,8 @@
     "@applitools/dom-utils": "^4.7.4",
     "@applitools/eyes-common": "^3.17.2",
     "@applitools/eyes-sdk-core": "^5.24.0",
-    "@applitools/visual-grid-client": "^13.5.7"
+    "@applitools/visual-grid-client": "^13.5.7",
+    "rest-api-handler": "^2.9.0"
   },
   "devDependencies": {
     "@applitools/sdk-test-kit": "^1.0.14",
@@ -58,6 +59,7 @@
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
+    "test:example": "mocha --no-timeouts \"test/example/*.spec.js\"",
     "test:coverage": "coverage-tests run --path test/coverage/index.js",
     "test:coverage:nuke": "coverage-tests nuke",
     "test:coverage:doctor": "coverage-tests doctor"
