--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-testcafe",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0-beta.4",
   "description": "Applitools Eyes SDK for Testcafe",
   "keywords": [
     "eyes-testcafe",
@@ -21,6 +21,11 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
+  "files": [
+    "src",
+    "dist",
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
@@ -43,7 +48,6 @@
   },
   "scripts": {
     "build": "rollup -c ./build/rollup.config.js",
-    "prepublishOnly": "npm run build",
     "render": "node scripts/render.js",
     "test": "mocha --no-timeouts \"test/**/*.spec2.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec2.js\"",
@@ -59,9 +63,9 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/plugin-transform-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
-    "core-js":"^3.6.1",
-    "url-polyfill":"^1.1.7",
-    "whatwg-fetch":"^3.0.0",
+    "core-js": "^3.6.1",
+    "url-polyfill": "^1.1.7",
+    "whatwg-fetch": "^3.0.0",
     "@joseph184/rollup-plugin-node-builtins": "^2.1.4",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
@@ -75,7 +79,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-polyfill":"^3.0.0",
+    "rollup-plugin-polyfill": "^3.0.0",
     "testcafe": "^1.5.0",
     "testcafe-browser-provider-browserstack": "^1.10.1",
     "ua-parser-js": "^0.7.20"
