--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-testcafe",
   "private": true,
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0-beta.6",
   "description": "Applitools Eyes SDK for Testcafe",
   "homepage": "https://applitools.com",
   "author": {
@@ -9,9 +9,9 @@
     "email": "team@applitools.com"
   },
   "files": [
-    "src",
     "dist",
-    "lib"
+    "lib",
+    "index.js"
   ],
   "repository": {
     "type": "git",
