--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-testcafe",
   "private": true,
-  "version": "2.0.0-beta.6",
+  "version": "2.0.0-beta.7",
   "description": "Applitools Eyes SDK for Testcafe",
   "homepage": "https://applitools.com",
   "author": {
@@ -26,11 +26,11 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "^4.6.41",
-    "@applitools/eyes-common": "^3.12.2",
-    "@applitools/eyes-sdk-core": "^5.20.7",
-    "@applitools/visual-grid-client": "^13.3.6",
+    "@applitools/dom-utils": "^4.7.4",
+    "@applitools/eyes-common": "^3.18.0",
+    "@applitools/eyes-sdk-core": "^5.25.0",
     "@applitools/functional-commons": "^1.5.4",
+    "@applitools/visual-grid-client": "^13.5.7",
     "rimraf": "^3.0.0"
   },
   "peerDependencies": {
@@ -70,17 +70,15 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/plugin-transform-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
-    "core-js": "^3.6.1",
-    "url-polyfill": "^1.1.7",
-    "whatwg-fetch": "^3.0.0",
     "@joseph184/rollup-plugin-node-builtins": "^2.1.4",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chromedriver": "^78.0.0",
+    "core-js": "^3.6.1",
     "express": "^4.17.1",
     "filenamify": "^4.1.0",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.2",
     "rollup": "^1.27.9",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -89,6 +87,8 @@
     "rollup-plugin-polyfill": "^3.0.0",
     "testcafe": "^1.5.0",
     "testcafe-browser-provider-browserstack": "^1.10.1",
-    "ua-parser-js": "^0.7.20"
+    "ua-parser-js": "^0.7.20",
+    "url-polyfill": "^1.1.7",
+    "whatwg-fetch": "^3.0.0"
   }
 }
