--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -39,6 +39,7 @@
     "@applitools/dom-utils": "^4.7.4",
     "@applitools/eyes-common": "^3.17.2",
     "@applitools/eyes-sdk-core": "^5.24.0",
+    "@applitools/sdk-fake-eyes-server": "^1.0.3",
     "@applitools/visual-grid-client": "^13.5.7"
   },
   "devDependencies": {
