--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@applitools/dom-utils": "^4.7.4",
     "@applitools/eyes-common": "^3.17.2",
-    "@applitools/eyes-sdk-core": "^5.24.0",
+    "@applitools/eyes-sdk-core": "6.0.0",
     "@applitools/visual-grid-client": "^13.5.7"
   },
   "devDependencies": {
@@ -48,6 +48,7 @@
     "chai": "^4.2.0",
     "chromedriver": "^78.0.0",
     "mocha": "^6.2.2",
+    "mocha-parallel-tests": "^2.2.2",
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "peerDependencies": {
