--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-selenium",
-  "version": "4.33.5",
+  "version": "4.33.6",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
@@ -39,7 +39,7 @@
     "@applitools/dom-utils": "^4.7.4",
     "@applitools/eyes-common": "^3.17.2",
     "@applitools/eyes-sdk-core": "6.0.0",
-    "@applitools/visual-grid-client": "^13.5.7"
+    "@applitools/visual-grid-client": "13.5.8"
   },
   "devDependencies": {
     "@applitools/sdk-test-kit": "^1.0.14",
