--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -23,13 +23,22 @@
     "type": "git",
     "url": "git+https://github.com/applitools/eyes.sdk.javascript1.git"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "mocha --no-timeouts \"test/**/*.test.js\""
+  },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "dependencies": {
     "express": "^4.17.1",
     "filenamify": "^4.1.0",
-    "ua-parser-js": "^0.7.21"
+    "node-fetch": "^2.6.0",
+    "ua-parser-js": "^0.7.21",
+    "uuid": "^3.3.3",
+    "zlib": "^1.0.5"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.0.0"
   }
 }
