--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@applitools/dom-capture": "^7.1.2",
+    "@applitools/sdk-test-kit": "^1.0.17",
     "@babel/plugin-transform-async-to-generator": "^7.7.4",
     "@babel/plugin-transform-regenerator": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
