adding assertions via API and updating test cases to use them

--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -61,7 +61,8 @@
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
     "test:coverage": "coverage-tests run --path test/coverage/index.js",
     "test:coverage:nuke": "coverage-tests nuke",
-    "test:coverage:doctor": "coverage-tests doctor"
+    "test:coverage:doctor": "coverage-tests doctor",
+    "test:coverage:custom": "mocha --no-timeouts \"test/coverage/custom/*.spec.js\""
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
