--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ packages/visual-grid-client/test/fixtures/src/*
 packages/eyes-testcafe/screenshots/*
 *.log
 packages/eyes-testcafe/**/*.pvt.testcafe.js
+tmp
