--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@applitools/eyes-testcafe",
-  "private": true,
-  "version": "2.0.0-beta.9",
+  "private": false,
+  "version": "2.0.0-beta.10",
   "description": "Applitools Eyes SDK for Testcafe",
   "homepage": "https://applitools.com",
   "author": {
@@ -27,7 +27,7 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/dom-utils": "^4.7.4",
-    "@applitools/eyes-common": "^3.18.0",
+    "@applitools/eyes-common": "^3.18.1",
     "@applitools/eyes-sdk-core": "^6.0.3",
     "@applitools/functional-commons": "^1.5.4",
     "@applitools/visual-grid-client": "^13.5.8",
