consolidated eslintignore into eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,13 @@
   },
   "extends": ["plugin:node/recommended"],
   "plugins": ["prettier", "mocha-no-only", "node"],
+  "ignorePatterns": [
+    "node_modules/",
+    "dist/",
+    "screenshots/",
+    "applitools.config.js",
+    "logs"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "no-process-exit": "off",
