--- a/packages/dom-utils/package.json
+++ b/packages/dom-utils/package.json
@@ -34,6 +34,7 @@
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
+    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\""
   },
