--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -42,6 +42,7 @@
     "mocha": "^6.2.2"
   },
   "scripts": {
+    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\""
   },
