--- a/packages/eyes-sdk-core-browser/package.json
+++ b/packages/eyes-sdk-core-browser/package.json
@@ -38,6 +38,7 @@
     "uglify-es": "^3.3.9"
   },
   "scripts": {
+    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "browserify": "browserify index.js > dist/eyes-sdk-core.browser.js",
     "uglify": "uglifyjs dist/eyes-sdk-core.browser.js > dist/eyes-sdk-core.browser.min.js",
     "build": "npm run browserify && npm run uglify"
