--- a/packages/eyes-selenium-jest-perf/package.json
+++ b/packages/eyes-selenium-jest-perf/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "4.5.106",
   "scripts": {
+    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test:perf": "jest"
   },
   "jest": {
