--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -57,6 +57,7 @@
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
+    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
