--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ node_js:
 - '8'
 cache: npm
 install:
-- npm run setup
+- npm install
 stages:
 - lint
   #- unit tests
@@ -22,46 +22,46 @@ jobs:
   include:
   - stage: lint
     name: 'dom-utils'
-    script: cd packages/dom-utils; npm run lint
+    script: cd packages/dom-utils; npm install; npm run lint
   - stage: lint
     name: 'eyes-appium'
-    script: cd packages/eyes-appium; npm run lint
+    script: cd packages/eyes-appium; npm install; npm run lint
   - stage: lint
     name: 'eyes-common'
-    script: cd packages/eyes-common; npm run lint
+    script: cd packages/eyes-common; npm install; npm run lint
   - stage: lint
     name: 'eyes-images-browser'
-    script: cd packages/eyes-images-browser; npm run lint
+    script: cd packages/eyes-images-browser; npm install; npm run lint
   - stage: lint
     name: 'eyes-images'
-    script: cd packages/eyes-images; npm run lint
+    script: cd packages/eyes-images; npm install; npm run lint
   - stage: lint
     name: 'eyes-protractor'
-    script: cd packages/eyes-protractor; npm run lint
+    script: cd packages/eyes-protractor; npm install; npm run lint
   - stage: lint
     name: 'eyes-sdk-core-browser'
-    script: cd packages/eyes-sdk-core-browser; npm run lint
+    script: cd packages/eyes-sdk-core-browser; npm install; npm run lint
   - stage: lint
     name: 'eyes-sdk-core'
-    script: cd packages/eyes-sdk-core; npm run lint
+    script: cd packages/eyes-sdk-core; npm install; npm run lint
   - stage: lint
     name: 'eyes-selenium-jest-perf'
-    script: cd packages/eyes-selenium-jest-perf; npm run lint
+    script: cd packages/eyes-selenium-jest-perf; npm install; npm run lint
   - stage: lint
     name: 'eyes-selenium'
-    script: cd packages/eyes-selenium; npm run lint
+    script: cd packages/eyes-selenium; npm install; npm run lint
   - stage: lint
     name: 'eyes-test-cafe'
-    script: cd packages/eyes-test-cafe; npm run lint
+    script: cd packages/eyes-test-cafe; npm install; npm run lint
   - stage: lint
     name: 'sdk-fake-eyes-server'
-    script: cd packages/sdk-fake-eyes-server; npm run lint
+    script: cd packages/sdk-fake-eyes-server; npm install; npm run lint
   - stage: lint
     name: 'sdk-test-kit'
-    script: cd packages/sdk-test-kit; npm run lint
+    script: cd packages/sdk-test-kit; npm install; npm run lint
   - stage: lint
     name: 'visual-grid-client'
-    script: cd packages/visual-grid-client; npm run lint
+    script: cd packages/visual-grid-client; npm install; npm run lint
     #  - stage: unit tests
     #    node_js: node
     #    script: npm run test:unit
