--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "eyes-sdk-javascript1",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "private": true,
   "scripts": {
     "setup": "npm i && node scripts/install.js"
