--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "private": true,
   "scripts": {
-    "setup": "npm i && node scripts/install.js"
+    "setup": "npm i && node scripts/setup.js"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
