--- a/packages/eyes-selenium-jest-perf/package.json
+++ b/packages/eyes-selenium-jest-perf/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "4.5.106",
   "scripts": {
+    "link": "node ../../scripts/link.js eyes-selenium-jest-perf",
+    "unlink": "node ../../scripts/unlink.js eyes-selenium-jest-perf",
     "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test:perf": "jest"
   },
