--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -39,6 +39,8 @@
     "mocha": "^6.2.2"
   },
   "scripts": {
+    "link": "node ../../scripts/link.js eyes-images",
+    "unlink": "node ../../scripts/unlink.js eyes-images",
     "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\""
