added tmp dir to estlint ignore

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
     "dist/",
     "screenshots/",
     "applitools.config.js",
-    "logs"
+    "logs",
+    "tmp/"
   ],
   "rules": {
     "prettier/prettier": "error",
