--- a/.travis.yml
+++ b/.travis.yml
@@ -43,10 +43,10 @@ jobs:
 
   - stage: unit tests
     name: eyes-selenium
-    script: cd eyes-selenium; npm run test:unit
+    script: cd packages/eyes-selenium; npm run test:unit
   -
     name: visual-grid-client
-    script: cd visual-grid-client; npm run test:unit
+    script: cd packages/visual-grid-client; npm run test:unit
 
   - stage: end-to-end tests
     name: eyes-selenium
